<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Get the Driver Directly From the Computer Manufacturer"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <View
            style="@style/gray_divider"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step3_01"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step3_02"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/step3dd_01"
            android:layout_width="330dp"
            android:layout_height="370dp"
            android:layout_gravity="center"
            tools:src="@drawable/step3dd_01"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step3_03"/>
        
        <ImageView
            android:id="@+id/step3dd_02"
            android:layout_width="330dp"
            android:layout_height="370dp"
            android:layout_gravity="center"
            tools:src="@drawable/step3dd_02"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step3_04"/>

        <ImageView
            android:id="@+id/step3dd_03"
            android:layout_width="330dp"
            android:layout_height="380dp"
            android:layout_gravity="center"
            tools:src="@drawable/step3dd_03"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step3_04_cont"/>

        <ImageView
            android:id="@+id/step3dd_04"
            android:layout_marginTop="10dp"
            android:layout_width="330dp"
            android:layout_height="370dp"
            android:layout_gravity="center"
            tools:src="@drawable/step3dd_04"/>

        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step3_05"/>

        <ImageView
            android:id="@+id/step3dd_05"
            android:layout_marginTop="10dp"
            android:layout_width="330dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            tools:src="@drawable/step3dd_05"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step3_05_cont"/>

        <ImageView
            android:id="@+id/step3dd_06"
            android:layout_width="330dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            tools:src="@drawable/step3dd_06"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step3_05_cont2"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step3_06"/>

    </LinearLayout>
</ScrollView>